fixed some letter spacing

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   font-family: 'League Spartan', sans-serif;
   font-weight: 300;
-  letter-spacing: -4px;
+  letter-spacing: -0.3em;
 }
 
 code {
