--- a/src/routes/Entertainment/components/Navbar/navbar.module.scss
+++ b/src/routes/Entertainment/components/Navbar/navbar.module.scss
@@ -27,6 +27,8 @@
 
 .accordionDetails {
     font-size: 25px;
+    letter-spacing: 0;
+    font-weight: 300;
     div {
         display: flex;        
         justify-content: center;
